--- a/kinectScan.csproj
+++ b/kinectScan.csproj
@@ -58,7 +58,7 @@
     </Reference>
     <Reference Include="Microsoft.Kinect, Version=1.7.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="Microsoft.Kinect.Toolkit">
-      <HintPath>packages\Microsoft.Kinect.Toolkit\obj\Debug\Microsoft.Kinect.Toolkit.dll</HintPath>
+      <HintPath>packages\Microsoft.Kinect.Toolkit\Microsoft.Kinect.Toolkit.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
